Update SQL Server to v2019-CU29

--- a/mssql/.env
+++ b/mssql/.env
@@ -1,6 +1,6 @@
 # https://mcr.microsoft.com/en-us/product/mssql/server/tags
 IMAGE=mcr.microsoft.com/mssql/server
-TAG=2019-CU28-GDR2
+TAG=2019-CU29
 TAG_EXTRA=ubuntu-20.04
 
 MSSQL_SA_PASSWORD=sqlserver!123
